--- a/examples/blog-view/templates/mixins/post.pug
+++ b/examples/blog-view/templates/mixins/post.pug
@@ -7,7 +7,7 @@ mixin post(post)
       p !{post.body}
       .post-footer
         //- - console.log(post.posted)
-        - var posted = format(post.posted, 'DD/MM/YYYY')
+        - var posted = format(parseISO(post.posted), 'dd/MM/yyyy')
         p.post-footer-content= `Posted by ${post.author ? post.author.name : 'someone'} on ${posted}`
 
 mixin post-detail(post)
@@ -18,5 +18,5 @@ mixin post-detail(post)
       h1.post-head= post.title
       p !{post.body}
       .post-footer
-        - var posted = format(post.posted, 'DD/MM/YYYY')
+        - var posted = format(parseISO(post.posted), 'dd/MM/yyyy')
         p.post-footer-content= `Posted by ${post.author ? post.author.name : 'someone'} on ${posted}`
