--- a/examples/blog-view/templates/views/home.pug
+++ b/examples/blog-view/templates/views/home.pug
@@ -7,7 +7,7 @@ block content
 
   section(style='margin: 48px 0')
     h2 Latest Posts
-    if locals.posts.length
+    if locals.posts && locals.posts.length
       each post in posts
         +post(post)
     else
